--- a/nginx_config/default.conf
+++ b/nginx_config/default.conf
@@ -4,6 +4,16 @@ server {
 
   root /usr/share/nginx/html;
 
+  # Enable gzip compression
+  gzip on;
+  gzip_static on;
+  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_proxied  any;
+  gzip_vary on;
+  gzip_comp_level 6;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+
   # StreamPipes
 
   location /streampipes-backend {
