--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ build:
       - dist/style.bundle.css
       - dist/style.bundle.css.gz
       - dist/style.bundle.js
-      - dist/stlye.bundle.js.gz
+      - dist/style.bundle.js.gz
       - dist/style.css
       - dist/stlyle.css.gz
     expire_in: 1 hour
