--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ build:
       - dist/style.bundle.js
       - dist/style.bundle.js.gz
       - dist/style.css
-      - dist/stlyle.css.gz
+      - dist/style.css.gz
     expire_in: 1 hour
 
 nginx:
