--- a/templates/consul/consul-deployment.yaml
+++ b/templates/consul/consul-deployment.yaml
@@ -12,9 +12,16 @@ spec:
       labels:
         app: consul
     spec:
+      volumes:
+        - name: consul-pv
+          persistentVolumeClaim:
+            claimName: consul-pvc
       containers:
         - name: consul
           image: consul
           ports:
             - containerPort: 8500
             - containerPort: 8600
+          volumeMounts:
+            - mountPath: "/consul/data"
+              name: consul-pv
