--- a/nginx_config/default.conf
+++ b/nginx_config/default.conf
@@ -28,6 +28,18 @@ server {
     proxy_redirect off;
   }
 
+  location /streampipes-apps {
+    set $upstream app-container:3002;
+
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://$upstream;
+    proxy_ssl_session_reuse off;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+  }
+
   location /streampipes-connect/ {
 #    set $upstream connect-master:8099;
 
