--- a/nginx_config/default.conf
+++ b/nginx_config/default.conf
@@ -34,7 +34,9 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://$upstream;
+    if ($request_uri ~* "/streampipes-apps/(.*)") {
+      proxy_pass  http://$upstream/$1;
+    }
     proxy_ssl_session_reuse off;
     proxy_set_header Host $http_host;
     proxy_redirect off;
