--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "ng2-dragula": "^1.5.0",
     "ngmap": "1.18.0",
     "ngx-color-picker": "^7.5.0",
-    "plotly.js": "^1.49.3",
+    "plotly.js": "1.49.3",
     "prismjs": "^1.16.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
