--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   REGISTRY_HOST: ipe-wim-gitlab.fzi.de:5000
-  HARBOR_IMAGE_NAME: $HARBOR_REGISTRY_HOST/$CI_PROJECT_PATH/$CI_COMMIT_REF_NAME
+  HARBOR_IMAGE_NAME: $HARBOR_REGISTRY_HOST/streampipes/ui
   IMAGE_NAME: $REGISTRY_HOST/$CI_PROJECT_PATH/$CI_COMMIT_REF_NAME
 
 stages:
@@ -62,7 +62,7 @@ nginx:
 #    - mkdir javadoc && mv target/site/apidocs/* ./javadoc
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
     - docker login -u zehnder -p $HARBOR_PASSWORD $HARBOR_REGISTRY_HOST
-    - docker build --no-cache --pull -t $HARBOR_IMAGE_NAME -t $IMAGE_NAME .
+    - docker build --no-cache --pull -t $HARBOR_IMAGE_NAME:0.63.0 -t $IMAGE_NAME .
     - docker push $IMAGE_NAME
     - docker push $HARBOR_IMAGE_NAME
 
@@ -80,7 +80,7 @@ nginx-docker-hub:
     - docker push streampipes/ui
   when: manual
   only:
-    - 0.62.0
+    - 0.63.0
     
 nginx-testfeld:
   image: docker:17.06.0-ce
