--- a/streampipes-backend/pom.xml
+++ b/streampipes-backend/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.63.0-SNAPSHOT</version>
+        <version>0.63.0</version>
     </parent>
     <artifactId>streampipes-backend</artifactId>
     <packaging>jar</packaging>
