--- a/templates/docker-compose.full.yml
+++ b/templates/docker-compose.full.yml
@@ -393,4 +393,8 @@ volumes:
 
 networks:
   spnet:
-    external: true
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 172.31.0.0/16
+         gateway: 172.31.0.1
