--- a/templates/docker-compose.lite.yml
+++ b/templates/docker-compose.lite.yml
@@ -249,4 +249,8 @@ volumes:
 
 networks:
   spnet:
-    external: true
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 172.31.0.0/16
+         gateway: 172.31.0.1
