--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
         <consul-client.version>1.3.5</consul-client.version>
         <jackson.version>2.9.9</jackson.version>
         <javax.ws.rs.version>2.1</javax.ws.rs.version>
-        <javax-servlet-api.version>3.1.0</javax-servlet-api.version>
+        <javax-servlet-api.version>4.0.1</javax-servlet-api.version>
+        <javax-validation.version>2.0.1.FINAL</javax-validation.version>
         <javassist.version>3.19.0-GA</javassist.version>
         <jersey.version>2.27</jersey.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
@@ -40,7 +41,7 @@
         <persistence-api.version>1.0.2</persistence-api.version>
         <rdf4j.version>2.4.5</rdf4j.version>
         <shiro.version>1.2.3</shiro.version>
-        <spring.version>2.1.6.RELEASE</spring.version>
+        <spring.version>2.1.8.RELEASE</spring.version>
         <streampipes-empire.version>1.9.11</streampipes-empire.version>
         <swagger.version>2.0.0</swagger.version>
         <type-parser.version>0.6.0</type-parser.version>
@@ -66,6 +67,11 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback-classic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>${javax-validation.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
@@ -505,6 +511,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.streampipes</groupId>
+                <artifactId>streampipes-container-base</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.tomakehurst</groupId>
                 <artifactId>wiremock</artifactId>
                 <version>${wiremock.version}</version>
@@ -659,6 +670,7 @@
         <module>streampipes-wrapper-standalone</module>
         <module>streampipes-connect-container-master</module>
         <module>streampipes-connect-container-worker</module>
+        <module>streampipes-container-base</module>
     </modules>
 
     <profiles>
