--- a/streampipes-connect-container/pom.xml
+++ b/streampipes-connect-container/pom.xml
@@ -11,28 +11,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jersey</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-container-base</artifactId>
         </dependency>
         <dependency>
             <groupId>org.streampipes</groupId>
@@ -82,6 +62,5 @@
             <artifactId>okio</artifactId>
             <version>1.15.0</version>
         </dependency>
-
     </dependencies>
 </project>
