--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <jackson.version>2.9.9</jackson.version>
         <javax.ws.rs.version>2.1</javax.ws.rs.version>
         <javax-servlet-api.version>4.0.1</javax-servlet-api.version>
-        <javax-validation.version>2.0.1.FINAL</javax-validation.version>
+        <javax-validation.version>2.0.1.Final</javax-validation.version>
         <javassist.version>3.19.0-GA</javassist.version>
         <jersey.version>2.27</jersey.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
