--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <streampipes.version>0.63.1-SNAPSHOT</streampipes.version>
         <lightcouch.version>0.1.8</lightcouch.version>
-        <javax-validation.version>2.0.1.FINAL</javax-validation.version>
+        <javax-validation.version>2.0.1.Final</javax-validation.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.18.3</mockito.version>
         <powermock.version>2.0.2</powermock.version>
