--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 
     <properties>
-        <streampipes.version>0.63.0</streampipes.version>
+        <streampipes.version>0.63.1-SNAPSHOT</streampipes.version>
         <lightcouch.version>0.1.8</lightcouch.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.18.3</mockito.version>
