Fix #284: Remove dependencies to org.json and unirest

--- a/streampipes-app-file-export/pom.xml
+++ b/streampipes-app-file-export/pom.xml
@@ -42,9 +42,9 @@
             <artifactId>streampipes-storage-couchdb</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mashape.unirest</groupId>
-            <artifactId>unirest-java</artifactId>
-            <version>1.4.9</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.5</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.restassured</groupId>
