--- a/streampipes-connect/pom.xml
+++ b/streampipes-connect/pom.xml
@@ -96,9 +96,8 @@
             <version>1.8</version>
         </dependency>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20171018</version>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
     </dependencies>
 </project>
